Changelog
=========

3.0a2 - unreleased
------------------

- Added undeclared dependency on Products.PloneLanguageTool >= 3.0.
  [hannosch]

3.0a1 - 2009-06-03
------------------

- Removed `checkVersion` check from our init method and declare a dependency
  on Plone instead.
  [hannosch]

- Changed the profile version to a simple `3`, to follow best practices of
  using simple integers for profile version numbers.
  [hannosch]

- Extended multi-lingual aware reference fields to handle multi-valued fields.
  [hannosch]

- Added test for language independent lines fields.
  [hannosch]

- Fixed the testSelector tests to work with the new default page handling.
  [hannosch]

- Cleaned up some old package metadata and converted zLOG usage to logging.
  [hannosch]

- Changed the language selector to respect default pages. We now link to the
  container of the translated default page rather than the default page itself.
  [hannosch]

- Added Language as an additional index to the uid catalog. This is required
  to get at least normal reference criteria to be able to restrict their
  selections based on the language.
  [hannosch]

- Adjust the copyField methods of the LanguageIndependentFields adapter to
  work with fields which have no accessor methods.
  [hannosch]

- Reworked the translationOf reference handling. Instead of relying on the
  normal Archetypes reference API, we digg into some of the internals to
  optimize the handling for the specific use-case we have:

  * We added Language as additional metadata to the reference catalog. To do
    so we needed to add a GenericSetup handler for the catalog to this package
    for now. This should be moved to Archetypes itself. An upgrade step for
    existing sites is available and needs to be run. The step is advertised in
    the add-on control panel of Plone 3.3 and later or available via the
    portal_setup tool in the ZMI.

    The new metadata reflects the language of the source of the reference, so