@@ -7,6 +7,7 @@ from Acquisition import aq_parent
 from Products.Five.browser.pagetemplatefile import ZopeTwoPageTemplateFile
 
 from Products.LinguaPlone.interfaces import ITranslatable
+from ZTUtils import make_query
 
 
 class TranslatableLanguageSelector(LanguageSelector):
@@ -31,8 +32,23 @@ class TranslatableLanguageSelector(LanguageSelector):
         else:
             translations = []
 
+        match = filter(None,context.getPhysicalPath()[-2:])
+        current_path = filter(None, self.request.get('PATH_INFO', '').split('/'))
+        append_path = []
+        stop = False
+        while current_path and not stop:
+            check = current_path.pop()
+            if check not in match:
+                append_path.insert(0,check)
+            else:
+                stop = True
+        if append_path:
+            append_path.insert(0, '')
+
         for data in results:
             data['translated'] = data['code'] in translations
+            appendtourl = '/'.join(append_path) + \
+                      '?' + make_query(self.request.form, dict(set_language=data['code']))
             if data['translated']:
                 trans = translations[data['code']][0]
                 container = aq_parent(trans)
@@ -40,7 +56,7 @@ class TranslatableLanguageSelector(LanguageSelector):
                     trans = container
                 state = getMultiAdapter((trans, self.request),
                         name='plone_context_state')
-                data['url'] = state.view_url() + '?set_language=' + data['code']
+                data['url'] = state.view_url() + appendtourl
             else:
                 container = aq_parent(context)
                 if isDefaultPage(container, context):
@@ -48,8 +64,8 @@ class TranslatableLanguageSelector(LanguageSelector):
                 state = getMultiAdapter((context, self.request),
                         name='plone_context_state')
                 try:
-                    data['url'] = state.view_url() + '?set_language=' + data['code']
+                    data['url'] = state.view_url() + appendtourl
                 except AttributeError:
-                    data['url'] = context.absolute_url() + '?set_language=' + data['code']
+                    data['url'] = context.absolute_url() + appendtourl
 
         return results
